--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
 
       gtag('config', 'G-WJQBS2WK9R');
     </script>
-    <title>🚀 devel-up</title>
+    <title>1🚀 devel-up</title> 
   </head>
   <body>
     <div id="root"></div>
